# src/routers/index.js
@@ -11,8 +11,14 @@ import attributeValueRoutes from "../models/attribute-Value/attribute-value.rout
 import newsRoutes from "../models/news/news.router.js";
 import bannerRoutes from "../models/banner/banner.router.js";
 import voucherRoutes from "../models/voucher/voucher.router.js";
+import cartRoutes from "../models/cart/cart.router.js";
+import { veriflyUser } from "../common/middleware/veriflyUser.js";
+import authenticate from "../common/middleware/authenticate.js";
+import authorizeRole from "../common/middleware/authorizeRole.js";
+import { userRoles } from "../models/enums.js";
 
 const router = Router();
+
 router.use("/attributes", attributeRoutes);
 router.use("/attribute-values", attributeValueRoutes);
 router.use("/product-variants", productVariantRoutes);
@@ -25,4 +31,11 @@ router.use("/auth", authRouter);
 router.use("/news", newsRoutes);
 router.use("/vouchers", voucherRoutes);
 router.use("/banners", bannerRoutes);
+router.use(
+  "/carts",
+  veriflyUser,
+  authenticate,
+  authorizeRole(userRoles.MEMBER),
+  cartRoutes
+);
 export default router;
